adds tomcat plugin